# senda

./: .env.example  .gitignore  .vercelignore  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  proxy.ts  vercel.json  vitest.config.ts
.cursor/rules/: release-policy.mdc
.cursor/skills/closedmesh-infra/: SKILL.md
.cursor/skills/dev-log/: SKILL.md
.cursor/skills/senda-infra/: SKILL.md
.cursor/skills/weekly-kpi/: SKILL.md  kpi-catalog.md
.github/workflows/: desktop-release.yml  vercel-production.yml
app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
app/(control)/: layout.tsx
app/(control)/chat/: page.tsx
app/(control)/dashboard/: page.tsx
app/(control)/logs/: page.tsx
app/(control)/models/: page.tsx
app/(control)/nodes/: page.tsx
app/(control)/settings/: page.tsx
app/(public)/: HomepageChat.tsx  layout.tsx  page.tsx
app/(public)/about/: page.tsx
app/(public)/contribute/: page.tsx
app/(public)/docs/: page.tsx
app/(public)/download/: page.tsx
app/(public)/metrics/: page.tsx
app/(public)/privacy/: page.tsx
app/(public)/security/: page.tsx
app/api/: _cors.ts
app/api/chat/: route.ts  (+1 more)
app/components/: AppShell.tsx  AppShowcase.tsx  ChatExperience.tsx  ChatMessage.tsx  CreditsChecker.tsx  CreditsLeaderboard.tsx  EarlyAccessBanner.tsx  LiveLaunchState.tsx  Logo.tsx  MeshAwareNote.tsx  MeshComputer.tsx  MeshLiveStats.tsx  MeshLiveStatus.tsx  MeshTopology.tsx  MeshUnderprovisionedNote.tsx  MobileNav.tsx  ModelSelector.tsx  PageHeader.tsx  PublicFooter.tsx  PublicHeader.tsx  RemoteInstall.tsx  Setup.tsx  SharingControl.tsx  Sidebar.tsx  StatusPill.tsx  marketing.tsx
app/lib/: catalog-merge.test.ts  catalog-merge.ts  chat-viable-mesh-models.test.ts  chat-viable-mesh-models.ts  controller-settings.ts  credit-multiplier.test.ts  credit-multiplier.ts  credits-ledger.test.ts  credits-ledger.ts  deployment.test.ts  deployment.ts  diagnostics-client.ts  downloads-context.tsx  fallback-provider.test.ts  fallback-provider.ts  kpi-snapshot.test.ts  kpi-snapshot.ts  kpi-store.ts  mesh-fit.ts  mesh-share.test.ts  mesh-share.ts  model-catalog.ts  model-id.test.ts  model-id.ts  model-picker-fitness.test.ts  model-picker-fitness.ts  model-tiers.test.ts  model-tiers.ts  node-display-state.ts  node-entry-dialability.test.ts  node-entry-dialability.ts  pipeline-election-version.test.ts  pipeline-election-version.ts  redis.ts  resolve-catalog.ts  routing-sla.test.ts  routing-sla.ts  runtime-target.ts  selectable-mesh-models.test.ts  selectable-mesh-models.ts  (+9 more)
desktop/: Cargo.toml  README.md  SIDECAR.md  build.rs  package-lock.json  package.json  tauri.conf.json
desktop/installer/: close_running_app.wxs  hooks.nsh
desktop/macos/: sidecar.entitlements.plist
desktop/scripts/: build.sh  fetch-node.sh
desktop/sidecar/: README.md
desktop/src/: main.rs  mesh.rs  sidecar.rs
docs/: heterogeneous-mesh-validation.md
public/: install-desktop.ps1  install-desktop.sh  install.ps1  install.sh  recover-windows-gemma.ps1
public/deck/: mesh-promise.html
scripts/: api-consumer.mjs  build-app-bundle.sh  dev.sh  fix-mesh-now.sh  install-controller.sh  kpi-capture-once.mjs  setup-upstash-vercel.sh  smoke-capability.sh  smoke-mesh-visibility.sh  vercel-upstash-install.exp
(+55 files in other folders)
