[package]
name = "senda-desktop"
version = "0.1.100"
edition = "2021"
description = "Cross-platform desktop shell for Senda — an open peer-to-peer mesh of contributed compute serving open-weight models."
license = "MIT OR Apache-2.0"
publish = false

# The compiled binary is what Tauri's bundler ships inside .app / .msi /
# .AppImage / .deb. Keep the binary name aligned with `productName` so the
# bundles look consistent across platforms.
[[bin]]
name = "senda"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` is the cross-platform menu-bar / system-tray API. `image-png`
# lets us load the runtime tray glyph from PNG without an extra crate.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Single-instance enforcement. Without this, every invocation of
# `Senda.exe` spawns a fresh process — its own webview window, its own
# Node sidecar, its own tray icon, its own runtime-upgrade loop. On Windows
# in particular, the WiX installer's "Launch Senda" post-install action,
# the Start Menu shortcut, and any user double-click compound: 0.1.60 users
# reported "the app keeps opening windows non stop until the computer crashes".
# This plugin makes a second invocation focus the live window and exit.
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"

# Lightweight blocking HTTP for status polling AND for the runtime
# auto-upgrade thread (which fetches https://github.com/.../releases/latest).
#
# IMPORTANT: ureq 2.x's TLS feature is named `tls` (umbrella that pulls in
# webpki + webpki-roots + rustls together). The standalone `rustls` feature
# only enables the optional rustls *dep* without the cert plumbing, which
# leaves ureq with no working TLS backend — every HTTPS call then dies at
# request time with "Unknown Scheme: cannot make HTTPS request because no
# TLS backend is configured". We hit this once 0.1.41 surfaced the desktop
# log: every runtime upgrade since 0.1.40 had failed at the very first
# `latest_runtime_version()` HTTPS probe with that exact message, so users
# were silently stuck on whatever runtime they had at 0.1.40 install time.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

# Single-shot env var lookups; `dirs` for resolving ~/Library/Logs etc.
dirs = "5"

# Used to dup2 the desktop process's stderr onto a real log file at
# startup. Tauri .app launches from Finder hand stdout/stderr to /dev/null
# (and Windows windowed apps don't even allocate a console), which means
# every `eprintln!` in the runtime upgrade / self-heal paths was vanishing
# silently. libc is already in our transitive tree via tauri/ureq; making
# it a direct dep just lets us call `dup2` without writing FFI by hand.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
# A single-binary GUI shell doesn't benefit from the default codegen units;
# squeeze the binary instead. Saves ~25% on the macOS .app size.
codegen-units = 1
lto = true
opt-level = "s"
strip = true
